# Wyrm

lang/: CMakeLists.txt  build.sh  class.c  class.h  expr.c  expr.h  hatch.c  hatch.h  lex.c  lex.h  list.c  list.h  map.c  map.h  preprocess.c  preprocess.h  program.c  program.h  statement.c  statement.h  syntax.c  syntax.h  syntax_ast_printer.c  test.sh  type.c  type.h  util.h
lang/.cache/clangd/index/: hatch.c.76EC040DC6656A15.idx  lex.c.4D3CC10618563BE5.idx  lex.h.7F6B0E01C82C145E.idx
lang/test/: 1.dc  2.dc  expr.dc  hatch.dc
